<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javi_h.encrypter.DecryptActivity">

    <TextView
        android:id="@+id/title_decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textAlignment="center"
        android:text="@string/pass_for_decryption"
        android:textSize="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pass_layout_decrypt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/title_decrypt"
        app:passwordToggleEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtPass_dec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="25"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/bDecrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass_layout_decrypt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/decrypt_file" />

    <TextView
        android:id="@+id/tArchD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="15dp"
        android:layout_below="@+id/bDecrypt"
        android:textSize="18dp"
        android:layout_marginTop="30dp"
        android:text="@string/selected_file"/>

    <TextView
        android:id="@+id/tInfoD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tArchD"
        android:textAlignment="center"
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:text="Info"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/bOpen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tInfoD"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:text="@string/open_with"/>
</RelativeLayout>
